# resume_maker

./: .gitignore  README.md  pyrightconfig.json  resume_maker.code-workspace
backend/: .env.example  README.md  docker-compose.yml  init.sql  pyproject.toml  test_postgres_checkpoint.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  graph.py  nodes.py  prompts.py  state.py
backend/app/agents/crewai/: crew.py
backend/app/agents/langgraph/: graph.py
backend/app/api/routes/: chat.py  generate.py  knowledge.py  upload.py
backend/app/core/: config.py  prompts.py
backend/app/database/: __init__.py  config.py  models.py
backend/app/models/: schemas.py
backend/app/repositories/: __init__.py  conversation_repository.py  resume_repository.py
backend/app/services/: session_manager.py  user_resume_service.py
backend/tests/: conftest.py  test_user_resume_service.py
backend/tests/fixtures/: README.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/generate/: page.tsx
frontend/app/knowledge/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/chat/: ChatInput.tsx  ChatMessage.tsx
frontend/components/generate/: JDInput.tsx
frontend/components/knowledge/: KnowledgeEditor.tsx
frontend/components/upload/: UploadDropzone.tsx
